force-app/main/default/objects/ADM_Work_History__c/ADM_Work_History__c.object-meta.xml
<CustomObject>
    <description>Due to the streaming API not sending changes for records, we have to store the changes so subscribers can be notified.</description>
    <label>Work History</label>
    <nameField>
        <displayFormat>WH-{0000}</displayFormat>
        <label>Work History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>