force-app/main/default/objects/ADM_Work_History__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <description>New sprint value. Using text because team can be deleted</description>
    <label>Sprint</label>
    <length>18</length>
    <type>Text</type>
</CustomField>