force-app/main/default/objects/ADM_Work_History__c/fields/Sprint_Old__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Old__c</fullName>
    <description>Previous sprint value. Using text because team can be deleted</description>
    <label>Sprint (Old)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>