force-app/main/default/objects/ADM_Work_History__c/fields/Work__c.field-meta.xml
<CustomField>
    <fullName>Work__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work</label>
    <referenceTo>ADM_Work__c</referenceTo>
    <relationshipLabel>Work History</relationshipLabel>
    <relationshipName>Work_History</relationshipName>
    <type>Lookup</type>
</CustomField>